--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ dotenv = "0.15.0"
 etherparse = "0.18.0"
 figment = { version = "0.10.19", features = ["toml"] }
 hex = "0.4.3"
+http = "1.3.1"
+httparse = "1.10.1"
 libc = "0.2.172"
 nfqueue = "0.9.1"
 regex = "1.11.1"
@@ -20,3 +22,6 @@ thiserror = "2.0.12"
 tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "signal"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+url = "2.5.4"
+percent-encoding = "2.3.0"
+urlencoding = "2.1.3"
