--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ hex = "0.4.3"
 http = "1.3.1"
 httparse = "1.10.1"
 libc = "0.2.172"
-nfqueue = { path = "./nfqueue-rs", version = "0.9.1" }
+nfqueue = { git = "https://github.com/ZephyrCodesStuff/nfqueue-rs", version = "0.9.1" }
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.12"
